# subconverter

./: CMakeLists.txt
.github/workflows/: build.yml  docker.yml
scripts/: Dockerfile  build.alpine.release.sh  build.windows.release.sh  merge_manifest.py
src/: main.cpp
src/server/: webserver_httplib.cpp
src/utils/: file.cpp
